Update index.html font change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     #rsvp {
       font-size: 6rem;
-      font-family: monospace;
+      font-family: 'Courier New', Courier, monospace;
       color: #0f0;
       text-align: center;
       max-width: 90vw;
