--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       text-align: center;
       max-width: 90vw;
       word-break: break-all;
+      user-select: none;
     }
   </style>
 </body>
