--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RSVP</title>
   <style>
-    body { margin:0; height:100vh; display:flex; background:#000; color:#0f0; font-family:monospace; }
+    body { margin:0; height:100vh; display:flex; background:#000; color:#0f0; font-family:monospace; position:relative; }
     #version { position:absolute; top:10px; left:10px; font-size:0.8rem; }
-    #main { flex:1; display:grid; place-items:center; margin-top:20px; }
+    #main { flex:1; display:grid; place-items:center; }
     #rsvp { font-size:6rem; text-align:center; max-width:90vw; word-break:break-all; user-select:none; cursor:default; caret-color:transparent; }
-    #controls { width:200px; padding:20px; display:flex; flex-direction:column; align-items:center; border-left:1px solid #0f0; }
-    button { background:#000; color:#0f0; border:1px solid #0f0; padding:10px; margin:5px; cursor:pointer; }
+    #fixedBar { position:fixed; bottom:20px; right:20px; display:flex; gap:10px; }
+    button { background:#000; color:#0f0; border:1px solid #0f0; padding:10px; cursor:pointer; }
+    #controls { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#000; padding:20px; border:1px solid #0f0; flex-direction:column; align-items:center; }
     .row { display:flex; align-items:center; margin:10px 0; }
     input { background:#000; color:#0f0; border:1px solid #0f0; text-align:center; width:50px; margin:0 5px; }
   </style>
 </head>
 <body>
-  <div id="version">v1.4 add punctuation</div>
+  <div id="version">v1.4 updated controls</div>
   <div id="main"><div id="rsvp"></div></div>
-  <div id="controls">
+  <div id="fixedBar">
+    <button id="settings">⚙️</button>
     <button id="playPause">Play</button>
+  </div>
+  <div id="controls">
+    <button id="closeSettings">Close</button>
     <div class="row">
       <span>WPM:</span>
       <button onclick="changeWpm(-10)">-</button>
@@ -32,6 +37,12 @@
       <input id="rampInput" type="number" value="5" min="0">
       <button onclick="changeRamp(1)">+</button>
     </div>
+    <div class="row">
+      <span>Font (rem):</span>
+      <button onclick="changeFont(-0.5)">-</button>
+      <input id="fontInput" type="number" value="6" min="1" step="0.5">
+      <button onclick="changeFont(0.5)">+</button>
+    </div>
   </div>
 
   <script>
@@ -42,6 +53,7 @@
     const display = document.getElementById('rsvp');
     let targetWpm = 500;
     let rampUp = 5;
+    let fontSize = 6;
     let timeoutId = null;
     let isPlaying = false;
     let startTime = null;
@@ -56,8 +68,18 @@
       document.getElementById('rampInput').value = rampUp;
     }
 
+    function changeFont(delta) {
+      fontSize = Math.max(1, fontSize + delta);
+      document.getElementById('fontInput').value = fontSize;
+      display.style.fontSize = `${fontSize}rem`;
+    }
+
     document.getElementById('wpmInput').addEventListener('input', e => { targetWpm = parseInt(e.target.value) || 500; });
     document.getElementById('rampInput').addEventListener('input', e => { rampUp = parseInt(e.target.value) || 5; });
+    document.getElementById('fontInput').addEventListener('input', e => { 
+      fontSize = parseFloat(e.target.value) || 6; 
+      display.style.fontSize = `${fontSize}rem`; 
+    });
 
     function getCurrentBaseInterval() {
       if (!startTime || rampUp === 0) return 60000 / targetWpm;
@@ -74,7 +96,7 @@
       else factor = 0.8 + (word.length - 4) / 11 * 0.4;
       let punctFactor = 1;
       const punct = word.match(/[.,;:!?]/);
-      if (punct) punctFactor = 1.5; // 50% pause on punctuation
+      if (punct) punctFactor = 1.5;
       return baseInterval * factor * punctFactor;
     }
 
@@ -97,6 +119,14 @@
       } else {
         clearTimeout(timeoutId);
       }
+    });
+
+    document.getElementById('settings').addEventListener('click', () => {
+      document.getElementById('controls').style.display = 'flex';
+    });
+
+    document.getElementById('closeSettings').addEventListener('click', () => {
+      document.getElementById('controls').style.display = 'none';
     });
   </script>
 </body>
