--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,20 +9,17 @@
     #version { position:absolute; top:10px; left:10px; font-size:0.8rem; }
     #main { flex:1; display:grid; place-items:center; }
     #rsvp { font-size:6rem; text-align:center; max-width:90vw; word-break:break-all; user-select:none; cursor:default; caret-color:transparent; }
-    #fixedBar { position:fixed; bottom:20px; right:20px; display:flex; gap:10px; }
-    button { background:#000; color:#0f0; border:1px solid #0f0; padding:10px; cursor:pointer; }
-    #controls { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#000; padding:20px; border:1px solid #0f0; flex-direction:column; align-items:center; }
+    #settings { position:fixed; top:10px; right:20px; background:#000; color:#0f0; border:1px solid #0f0; padding:8px 12px; cursor:pointer; }
+    #controls { display:none; position:fixed; top:50px; right:20px; background:#000; padding:20px; border:1px solid #0f0; flex-direction:column; align-items:center; z-index:10; }
     .row { display:flex; align-items:center; margin:10px 0; }
+    button { background:#000; color:#0f0; border:1px solid #0f0; padding:10px; cursor:pointer; margin:5px; }
     input { background:#000; color:#0f0; border:1px solid #0f0; text-align:center; width:50px; margin:0 5px; }
   </style>
 </head>
 <body>
-  <div id="version">v1.4 updated controls</div>
+  <div id="version">v1.5 layout change</div>
   <div id="main"><div id="rsvp"></div></div>
-  <div id="fixedBar">
-    <button id="settings">⚙️</button>
-    <button id="playPause">Play</button>
-  </div>
+  <button id="settings">⚙️</button>
   <div id="controls">
     <button id="closeSettings">Close</button>
     <div class="row">
@@ -96,8 +92,7 @@
       else if (word.length >= 15) factor = 1.2;
       else factor = 0.8 + (word.length - 4) / 11 * 0.4;
       let punctFactor = 1;
-      const punct = word.match(/[.,;:!?]/);
-      if (punct) punctFactor = 1.5;
+      if (word.match(/[.,;:!?]/)) punctFactor = 1.5;
       return baseInterval * factor * punctFactor;
     }
 
@@ -111,19 +106,25 @@
       timeoutId = setTimeout(showNext, interval);
     }
 
-    document.getElementById('playPause').addEventListener('click', () => {
+    function togglePlay() {
       isPlaying = !isPlaying;
-      document.getElementById('playPause').textContent = isPlaying ? 'Pause' : 'Play';
       if (isPlaying) {
         startTime = Date.now();
         showNext();
       } else {
         clearTimeout(timeoutId);
       }
+    }
+
+    document.body.addEventListener('click', (e) => {
+      if (e.target.id !== 'settings' && e.target.closest('#controls') === null) {
+        togglePlay();
+      }
     });
 
-    document.getElementById('settings').addEventListener('click', () => {
-      document.getElementById('controls').style.display = 'flex';
+    document.getElementById('settings').addEventListener('click', (e) => {
+      e.stopPropagation();
+      document.getElementById('controls').style.display = document.getElementById('controls').style.display === 'flex' ? 'none' : 'flex';
     });
 
     document.getElementById('closeSettings').addEventListener('click', () => {
